--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
 <body>
     <audio id="messageSound">
         <source src="sunet.mp3" type="audio/mpeg">
+        <source src="path_to_your_sound_file.ogg" type="audio/ogg">
         Your browser does not support the audio element.
     </audio>
     <div id="chatContainer">
