--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
             border: 3px solid #260050;
         }
         .chat-bubble {
-    padding: 10px;
-    margin: 10px 0;
-    border-radius: 30px;
+    padding: 5px 10px; /* Ajustăm padding-ul pentru a reduce spațiul sus-jos */
+    margin: 5px 0; /* Ajustăm margin pentru a reduce spațiul dintre mesaje */
+    border-radius: 20px; /* Modifică valoarea pentru a rotunji marginile */
     display: inline-block;
     max-width: 80%;
+    word-wrap: break-word; /* Asigurăm că textul lung se rupe la marginea casetei */
 }
 
 .chat-bubble.user {
@@ -66,6 +67,7 @@
     color: #4722a2;
     align-self: flex-end;
     text-align: right;
+    margin-left: auto; /* Asigură alinierea la dreapta */
 }
 
 .chat-bubble.assistant {
