--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             border: 3px solid #260050;
         }
         .chat-bubble {
-    padding: 5px 10px; /* Ajustăm padding-ul pentru a reduce spațiul sus-jos */
+    padding: 5px 20px; /* Ajustăm padding-ul pentru a reduce spațiul sus-jos */
     margin: 5px 0; /* Ajustăm margin pentru a reduce spațiul dintre mesaje */
     border-radius: 20px; /* Modifică valoarea pentru a rotunji marginile */
     display: inline-block;
@@ -67,7 +67,7 @@
     color: #4722a2;
     align-self: flex-end;
     text-align: right;
-    margin-left: auto; /* Asigură alinierea la dreapta */
+    margin-right: auto; /* Asigură alinierea la dreapta */
 }
 
 .chat-bubble.assistant {
