--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     background-color: #ffffff;
     color: #4722a2;
     align-self: flex-end;
-    text-align: right;
+    text-align: left;
     margin-right: auto; /* Asigură alinierea la dreapta */
 }
 
