--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             color: #4722a2;
             align-self: flex-end;
             text-align: right;
-            margin-left: auto; /* Asigură alinierea la dreapta */
+            margin-left: right; /* Asigură alinierea la dreapta */
         }
 
         .chat-bubble.assistant {
