--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ro">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scaleable=no">
     <title>ChatGPT Integration</title>
     <style>
         body {
@@ -67,13 +67,15 @@
             color: #4722a2;
             align-self: flex-end;
             text-align: right;
-            margin-left: right; /* Asigură alinierea la dreapta */
+            margin-left: auto; /* Asigură alinierea la dreapta */
         }
 
         .chat-bubble.assistant {
             background-color: #f1f1f1;
             color: #4722a2;
             align-self: flex-start;
+            text-align: left;
+            margin-right: auto; /* Asigură alinierea la stânga */
         }
         #inputBox {
             flex-grow: 1;
