--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         .message.user {
             background-color: #ffffff;
             color: #4722a2;
-            align-self: flex-end;
-            text-align: right;
+            align-self: flex-start;
+            text-align: left;
             margin-left: auto;
         }
         .message.assistant {
