--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         .message.assistant {
             background-color: #f1f1f1;
             color: #4722a2;
-            align-self: flex-start;
+            align-self: flex-end;
             text-align: left;
             margin-right: auto;
         }
