--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             align-self: flex-end;
             text-align: left;
             margin-right: auto;
+            margin: 10px 0;
         }
         .message.assistant {
             background-color: #f1f1f1;
