--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ChatGPT Integration</title>
-    <style>
+   <style>
         body {
             font-family: Arial, sans-serif;
         }
@@ -12,68 +12,29 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            width: 300px;
+            width: 400px; /* Adjust this value to your desired width */
             max-width: 100%;
-            display: none;
+            display: none; /* Initially hidden */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            border-radius: 50%;
+            border-radius: 50%; /* Make it oval */
             overflow: hidden;
             display: flex;
             flex-direction: column;
-            max-height: 90vh;
+            max-height: 80vh; /* Adjust this value to your desired height */
             background-color: white;
-            background: url('gif.gif');
-            transition: border-radius 0.3s ease, bottom 0.3s ease, right 0.3s ease, transform 0.3s ease;
+            transition: border-radius 0.3s ease;
         }
         #chatContainer.open {
-            border-radius: 20px;
-            bottom: 50%;
-            right: 50%;
-            transform: translate(50%, 50%);
+            border-radius: 50px; /* Adjust the border-radius when opened */
         }
         #chatbox {
             flex-grow: 1;
-            height: 500px;
+            height: 500px; /* Adjust this value to your desired height */
             padding: 10px;
             overflow-y: auto;
-            background-color: #260050;
+            background-color: #260050; /* Change background color */
             border-top: 1px solid #ccc;
-            color: #4722a2;
-            scrollbar-width: thin;
-            scrollbar-color: #975bf8 #260050;
-        }
-        #chatbox::-webkit-scrollbar {
-            width: 12px;
-        }
-        #chatbox::-webkit-scrollbar-track {
-            background: #260050;
-        }
-        #chatbox::-webkit-scrollbar-thumb {
-            background-color: #975bf8;
-            border-radius: 20px;
-            border: 3px solid #260050;
-        }
-        .message {
-            padding: 5px 10px;
-            margin: 5px 0;
-            border-radius: 20px;
-            display: inline-block;
-            max-width: 80%;
-        }
-        .message.user {
-            background-color: #ffffff;
-            color: #4722a2;
-            align-self: flex-end;
-            text-align: left;
-            margin-right: auto;
-            margin: 10px 0;
-        }
-        .message.assistant {
-            background-color: #f1f1f1;
-            color: #4722a2;
-            align-self: flex-start;
-            text-align: left;
-            margin-left: auto;
+            color: #4722a2; /* Change text color */
         }
         #inputBox {
             flex-grow: 1;
@@ -81,10 +42,6 @@
             padding: 10px;
             border-radius: 0 0 0 10px;
             outline: none;
-            transition: box-shadow 0.3s ease;
-        }
-        #inputBox:focus {
-            box-shadow: 0 0 10px rgba(151, 91, 248, 0.5);
         }
         #chatHeader {
             display: flex;
@@ -104,25 +61,14 @@
             font-weight: bold;
             flex-grow: 1;
         }
-        #closeButton {
-            background: transparent;
-            border: none;
-            color: black;
-            font-size: 20px;
-            cursor: pointer;
-        }
         #sendButton {
-            width: 80px;
+            width: 80px; /* Adjust this value to your desired width */
             background-color: #9700f8;
             color: white;
             border: none;
             border-radius: 0 0 20px 0;
             cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-        }
-        #sendButton:hover {
-            background-color: #7500c4;
+            font-size: 16px; /* Adjust this value to your desired font size */
         }
         #minimizedChat {
             display: flex;
@@ -145,8 +91,8 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 62px;
-            height: 62px;
+            width: 62px; /* Dimensiunea inelului exterior */
+            height: 62px; /* Dimensiunea inelului exterior */
             border-radius: 50%;
             border: 2px solid transparent;
             background: conic-gradient(from 0deg, #00d79e, #00739e);
@@ -163,11 +109,34 @@
             }
         }
         #minimizedChat img {
-            width: 62px;
-            height: 62px;
+            width: 62px; /* Ajustează dimensiunea imaginii */
+            height: 62px; /* Ajustează dimensiunea imaginii */
             border-radius: 50%;
             object-fit: cover;
             z-index: 2;
+        }
+        .message {
+            margin: 10px 0;
+            display: flex;
+            align-items: center;
+        }
+        .message p {
+            padding: 10px;
+            border-radius: 10px;
+            max-width: 80%;
+            color: #4722a2; /* Change text color */
+        }
+        .message.user {
+            justify-content: flex-end;
+        }
+        .message.user p {
+            background-color: #ffffff;
+        }
+        .message.assistant {
+            justify-content: flex-start;
+        }
+        .message.assistant p {
+            background-color: #f1f1f1;
         }
         .typing-indicator {
             display: flex;
@@ -197,6 +166,7 @@
                 opacity: 1;
             }
         }
+        /* Media queries for mobile optimization */
         @media (max-width: 600px) {
             #chatContainer {
                 width: 100%;
@@ -216,27 +186,29 @@
                 height: 30px;
             }
             #sendButton {
-                width: 80px;
+                width: 80px; /* Adjust this value to your desired width */
                 border-radius: 0;
-                font-size: 14px;
+                font-size: 14px; /* Adjust this value to your desired font size */
             }
         }
-        .prompt {
-            display: block;
-            font-weight: bold;
-            margin: 10px 0;
-            cursor: pointer;
-        }
-        #notificationDot {
-            position: absolute;
-            top: 2px;
-            right: 2px;
-            width: 14px;
-            height: 14px;
-            background-color: red;
-            border-radius: 50%;
+        #codeInputContainer {
             display: none;
-            z-index: 3;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+        }
+        #codeInput {
+            padding: 10px;
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+        #confirmCodeButton {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #9700f8;
+            color: white;
+            border: none;
+            cursor: pointer;
         }
     </style>
 </head>
