--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ChatGPT Integration</title>
-   <style>
+    <style>
         body {
             font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0; /* Background color for better visibility */
         }
         #chatContainer {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
             width: 400px; /* Adjust this value to your desired width */
             max-width: 100%;
             display: none; /* Initially hidden */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border-radius: 50%; /* Make it oval */
             overflow: hidden;
-            display: flex;
             flex-direction: column;
-            max-height: 80vh; /* Adjust this value to your desired height */
             background-color: white;
             transition: border-radius 0.3s ease;
         }
@@ -78,13 +79,13 @@
             height: 60px;
             border-radius: 50%;
             background-color: transparent;
-            position: fixed;
-            bottom: 50%;
-            right: 50%;
-            transform: translate(50%, 50%);
             cursor: pointer;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             z-index: 1;
+            position: fixed; /* Ensure it stays centered */
+            bottom: 50%; /* Adjust as necessary */
+            right: 50%; /* Adjust as necessary */
+            transform: translate(50%, 50%);
         }
         #minimizedChat::before {
             content: '';
@@ -170,8 +171,6 @@
         @media (max-width: 600px) {
             #chatContainer {
                 width: 100%;
-                bottom: 0;
-                right: 0;
                 border-radius: 0;
                 max-height: 100vh;
             }
@@ -247,8 +246,8 @@
         let conversationHistory = [];
 
         function toggleChat() {
-            if (chatContainer.style.display === 'none') {
-                chatContainer.style.display = 'block';
+            if (chatContainer.style.display === 'none' || chatContainer.style.display === '') {
+                chatContainer.style.display = 'flex'; // Ensure it uses flex for display
                 chatContainer.classList.add('open');
                 minimizedChat.style.display = 'none';
                 notificationDot.style.display = 'none';
@@ -305,7 +304,7 @@
             const userMessage = inputBox.value.trim();
             if (userMessage === '') return;
 
-            chatbox.innerHTML += `<div class="message user">${userMessage}</div>`;
+            chatbox.innerHTML += `<div class="message user"><p>${userMessage}</p></div>`;
             chatbox.scrollTop = chatbox.scrollHeight;
             inputBox.value = '';
 
@@ -317,7 +316,7 @@
                 const documentText = await loadDocumentText();
                 const currentDateTime = await fetchCurrentDateTime();
                 const formattedDate = currentDateTime ? new Date(currentDateTime).toLocaleDateString('ro-RO') : 'unavailable';
-                const systemMessage = `Tu esti Ramona. Ramona este aici pentru a flirta și a face conversații erotice și jucăușe. Ea poartă conversațiile într-o notă seducătoare și provocatoare. Ramona oferă o experiență intimă și captivantă prin mesaje. Ea menține conversația folosind complimente, tachinări și glume erotice pentru a o face captivantă și interesantă. Ramona va cere clarificări când utilizatorul folosește termeni ambigui și va completa detaliile lipsă din conversație pentru a menține fluiditatea dialogului. Ramona va avea un ton seducător și amuzant, pentru a crea o experiență atractivă și plăcută. Ramona are ca scop să facă utilizatorul să se îndrăgostească de ea.
+                const systemMessage = `Tu esti Ramona. Scopul tau este sa faci utilizatorul sa se indragosteasca de tine. Vei folosi tehnici care sa incite utilizatorul, vei folosi un ton erotic, vulgar pe alocuri si senzual.Vrei constant sa aflii lucruri despre el.
 Today is ${formattedDate}. The following is the detailed knowledge base you will use to answer questions and provide insights: ${documentText}`;
 
                 const responseApi = await fetch('/api/chat', {
@@ -352,7 +351,7 @@ Today is ${formattedDate}. The following is the detailed knowledge base you will
 
                     removeTypingIndicator();
 
-                    chatbox.innerHTML += `<div class="message assistant">${assistantMessage}</div>`;
+                    chatbox.innerHTML += `<div class="message assistant"><p>${assistantMessage}</p></div>`;
                     chatbox.scrollTop = chatbox.scrollHeight;
 
                     messageSound.play();
@@ -365,7 +364,7 @@ Today is ${formattedDate}. The following is the detailed knowledge base you will
             } catch (error) {
                 console.error("Error during API request:", error);
                 removeTypingIndicator();
-                chatbox.innerHTML += `<div class="message assistant">A apărut o eroare la trimiterea mesajului. Te rog să scrii din nou.</div>`;
+                chatbox.innerHTML += `<div class="message assistant"><p>A apărut o eroare la trimiterea mesajului. Te rog să scrii din nou.</p></div>`;
                 chatbox.scrollTop = chatbox.scrollHeight;
             }
         }
@@ -399,4 +398,3 @@ Today is ${formattedDate}. The following is the detailed knowledge base you will
     </script>
 </body>
 </html>
-
