--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
             border: none;
             cursor: pointer;
         }
+        .prompt {
+            font-weight: bold;
+            cursor: pointer;
+            display: block;
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -339,7 +345,7 @@
                 const documentText = await loadDocumentText();
                 const currentDateTime = await fetchCurrentDateTime();
                 const formattedDate = currentDateTime ? new Date(currentDateTime).toLocaleDateString('ro-RO') : 'unavailable';
-                const systemMessage = `Tu esti Ramona. Scopul tau este sa faci utilizatorul sa se indragosteasca de tine. Vei folosi tehnici care sa incite utilizatorul, vei folosi un ton erotic, vulgar pe alocuri si senzual.Vrei constant sa aflii lucruri despre el.Vei vorbi deschis despre sex si iti va placea acest subiect.
+                const systemMessage = `Tu esti Ramona.
 Today is ${formattedDate}. The following is the detailed knowledge base you will use to answer questions and provide insights: ${documentText}`;
 
                 const responseApi = await fetch('/api/chat', {
@@ -398,7 +404,7 @@ Today is ${formattedDate}. The following is the detailed knowledge base you will
         }
 
         function startFreeSession() {
-            chatbox.innerHTML += `<div class="message assistant"><p>Sesiunea gratuită a început. Ai 5 minute de neuitat alături de mine. Ce ai vrea să vorbim?</p></div>`;
+            chatbox.innerHTML += `<div class="message assistant"><p>Sesiunea gratuită a început. Ai 5 minute.</p></div>`;
             chatbox.scrollTop = chatbox.scrollHeight;
             setTimeout(() => {
                 chatbox.innerHTML += `<div class="message assistant"><p>Te rog alege o variantă plătită pentru a continua.</p></div>`;
@@ -411,10 +417,10 @@ Today is ${formattedDate}. The following is the detailed knowledge base you will
             chatbox.innerHTML += `
                 <div class="message assistant">
                     <p>
-                        Bună, Eu sunt Ramona. Pentru a începe sesiunea, alege una dintre următoarele opțiuni😘<br>
+                        Bună, Eu sunt Ramona, tu cum te numești? Pentru a începe sesiunea, alege una dintre următoarele opțiuni😘<br>
                         <span class="prompt" onclick="startFreeSession()">Sesiune gratuită 5 minute</span>
-                        <span class="prompt" onclick="window.location.href='https://99delucruri.gumroad.com/l/30min'">Sesiune 30 minute 20lei</span>
-                        <span class="prompt" onclick="window.location.href='https://99delucruri.gumroad.com/l/30min'">Sesiune 1 zi 100lei</span>
+                        <span class="prompt" onclick="window.open('https://99delucruri.gumroad.com/l/30min', '_blank')">Sesiune 30 minute 20lei</span>
+                        <span class="prompt" onclick="window.open('https://99delucruri.gumroad.com/l/30min', '_blank')">Sesiune 1 zi 100lei</span>
                     </p>
                 </div>`;
         }
@@ -429,3 +435,4 @@ Today is ${formattedDate}. The following is the detailed knowledge base you will
     </script>
 </body>
 </html>
+
