--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ro">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scaleable=no">
     <title>ChatGPT Integration</title>
     <style>
         body {
@@ -257,6 +257,10 @@
             <input type="text" id="inputBox" placeholder="Scrie mesajul tau aici..." onkeydown="if(event.key === 'Enter') sendMessage()">
             <button id="sendButton" onclick="sendMessage()">Send</button>
         </div>
+        <div id="codeInputContainer">
+            <input type="text" id="codeInput" placeholder="Introduceți codul">
+            <button id="confirmCodeButton" onclick="confirmCode()">Confirm</button>
+        </div>
     </div>
     <div id="minimizedChat" onclick="toggleChat()">
         <img src="https://www.livemint.com/lm-img/img/2023/11/26/600x338/403913659_1090924071915537_5840352482645330250_n_1700972603125_1700972609863.jpg" alt="Ramona">
@@ -271,6 +275,8 @@
         const minimizedChat = document.getElementById('minimizedChat');
         const notificationDot = document.getElementById('notificationDot');
         const messageSound = document.getElementById('messageSound');
+        const codeInputContainer = document.getElementById('codeInputContainer');
+        const codeInput = document.getElementById('codeInput');
         let typingIndicator;
         let conversationHistory = [];
 
@@ -345,7 +351,7 @@
                 const documentText = await loadDocumentText();
                 const currentDateTime = await fetchCurrentDateTime();
                 const formattedDate = currentDateTime ? new Date(currentDateTime).toLocaleDateString('ro-RO') : 'unavailable';
-                const systemMessage = `Tu esti Ramona.
+                const systemMessage = `Tu esti Ramona. Scopul tau este sa faci utilizatorul sa se indragosteasca de tine. Vei folosi tehnici care sa incite utilizatorul, vei folosi un ton erotic, vulgar pe alocuri si senzual.Vrei constant sa aflii lucruri despre el.Vei vorbi deschis despre sex si iti va placea acest subiect.
 Today is ${formattedDate}. The following is the detailed knowledge base you will use to answer questions and provide insights: ${documentText}`;
 
                 const responseApi = await fetch('/api/chat', {
@@ -404,12 +410,31 @@ Today is ${formattedDate}. The following is the detailed knowledge base you will
         }
 
         function startFreeSession() {
-            chatbox.innerHTML += `<div class="message assistant"><p>Sesiunea gratuită a început. Ai 5 minute.</p></div>`;
+            chatbox.innerHTML += `<div class="message assistant"><p>Sesiunea gratuită a început. Avem 5 minute de neuitat.</p></div>`;
             chatbox.scrollTop = chatbox.scrollHeight;
-            setTimeout(() => {
-                chatbox.innerHTML += `<div class="message assistant"><p>Te rog alege o variantă plătită pentru a continua.</p></div>`;
+            setTimeout(showPaywall, 300000); // 5 minutes in milliseconds
+        }
+
+        function showPaywall() {
+            chatbox.innerHTML += `<div class="message assistant"><p>Te rog alege o variantă plătită pentru a continua:</p>
+                <span class="prompt" onclick="window.open('https://99delucruri.gumroad.com/l/30min', '_blank')">Sesiune 30 minute 20lei</span>
+                <span class="prompt" onclick="window.open('https://99delucruri.gumroad.com/l/30min', '_blank')">Sesiune 1 zi 100lei</span>
+                <p>Introduceți codul pentru a continua conversația.</p></div>`;
+            chatbox.scrollTop = chatbox.scrollHeight;
+            codeInputContainer.style.display = 'flex';
+        }
+
+        function confirmCode() {
+            const enteredCode = codeInput.value.trim();
+            if (enteredCode === '1234') {
+                chatbox.innerHTML += `<div class="message assistant"><p>Codul este corect. Putem continua conversația.</p></div>`;
+                codeInputContainer.style.display = 'none';
                 chatbox.scrollTop = chatbox.scrollHeight;
-            }, 300000); // 5 minutes in milliseconds
+            } else {
+                chatbox.innerHTML += `<div class="message assistant"><p>Codul este greșit, te rog verifică codul primit după efectuarea plății.</p></div>`;
+                chatbox.scrollTop = chatbox.scrollHeight;
+            }
+            codeInput.value = '';
         }
 
         async function openChatWithInitialMessage() {
@@ -417,7 +442,7 @@ Today is ${formattedDate}. The following is the detailed knowledge base you will
             chatbox.innerHTML += `
                 <div class="message assistant">
                     <p>
-                        Bună, Eu sunt Ramona, tu cum te numești? Pentru a începe sesiunea, alege una dintre următoarele opțiuni😘<br>
+                        Bună, Eu sunt Ramona! Pentru a începe sesiunea, alege una dintre următoarele opțiuni😘<br>
                         <span class="prompt" onclick="startFreeSession()">Sesiune gratuită 5 minute</span>
                         <span class="prompt" onclick="window.open('https://99delucruri.gumroad.com/l/30min', '_blank')">Sesiune 30 minute 20lei</span>
                         <span class="prompt" onclick="window.open('https://99delucruri.gumroad.com/l/30min', '_blank')">Sesiune 1 zi 100lei</span>
@@ -435,4 +460,3 @@ Today is ${formattedDate}. The following is the detailed knowledge base you will
     </script>
 </body>
 </html>
-
